Change site base url

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
-baseurl: "/"
-url: "https://alefanalytics.org/blog/"
+baseurl: "/blog"
+url: "https://alefanalytics.org"
 
 # THEME-SPECIFIC CONFIGURATION
 title: ALEF's blog                                      # site's title
